--- a/style.css
+++ b/style.css
@@ -14,17 +14,22 @@ body {
   background-color: #16161e;
 }
 
+.logo {
+  width: 20%;
+}
+
 main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 15rem;
+  margin-top: 10rem;
 }
 
 h1 {
   font-size: 2.9rem;
   font-weight: 700;
+  margin-top: 2rem;
 }
 
 h2 {
@@ -52,7 +57,7 @@ nav {
 }
 
 .about {
-  margin-top: 10rem;
+  margin-top: 6rem;
   display: flex;
   justify-content: center;
 }
@@ -159,5 +164,9 @@ nav {
   .infoText {
     width: 20rem;
     text-align: center;
+  }
+
+  .logo {
+    width: 50%;
   }
 }
